<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lee.finalproject.MovieDetailFragment">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:fadingEdge="vertical"
        android:layout_alignParentLeft="true">


    <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/movie_title" />

            <EditText
                android:id="@+id/edit_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/movie_actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_actors" />

            <EditText
                android:id="@+id/edit_movie_actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_description" />
            <EditText
                android:id="@+id/edit_movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/movie_genre" />
            <!--<EditText-->
                <!--android:id="@+id/edit_movie_genre"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genre_spinner"
                android:entries="@array/spingarr"
                />

            <TextView
                android:id="@+id/movie_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_length" />
            <EditText
                android:id="@+id/edit_movie_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:inputType="number"/>

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_rating" />
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:max="255"
                android:progress="255"
                android:stepSize="0.5"
                android:id="@+id/movie_ratingBar"/>

            <!--<EditText-->
                <!--android:id="@+id/edit_movie_rating"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->

            <TextView
                android:id="@+id/movie_URL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_URL" />
            <EditText
                android:id="@+id/edit_movie_URL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/poster_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modify_content"
        android:text="@string/movie_update"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_delete"
        android:layout_above="@+id/modify_content"
        android:layout_alignParentEnd="true"
        android:text="@string/movie_remove"/>

</RelativeLayout>
